[package]
name = "grm"
version = "0.1.0"
authors = ["MaaniBeigy <manibeygi@gmail.com>"]
edition = "2018"
description = "Generalized Resemblance Models"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = ""
repository = ""
keywords = [
    "generalized resemblance models", 
    "machine learning", 
    "predction", 
    "similarity", 
    "fuzzy",
]

[features]
default = []
cache = []
rwlock = []
borrow = []
fast = ["cache", "rwlock", "borrow"]

[dependencies]
rayon = "1.1.0"
